--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,5 +44,10 @@
     &_horizontal {
       transform: translateX(-50%);
     }
+
+    &_has-collisions {
+      opacity: 0;
+      z-index: -10;
+    }
   }
 }
