rename mixin grid-cell to cell

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,5 @@
 @import './grid/grid';
-@import './grid/grid-cell';
+@import './grid/cell';
 @import './interval/interval';
 @import './handle/handle';
 @import './track/track';
