--- a/src/components/interval/_interval.scss
+++ b/src/components/interval/_interval.scss
@@ -1,5 +1,14 @@
+/// Interval component - range of selected values
+/// @param $name class name to add as a block suffix to parent class
+/// @param $offset position relative to track
+/// @param $thickness interval thickness
+/// @param $bg interval background
+/// @param $border-width
+/// @param $border-color
+/// @param $border-radius
 @mixin interval(
   $name,
+  $offset,
   $thickness,
   $bg,
   $border-width,
@@ -14,7 +23,7 @@
 
     @include modifier(horizontal) {
       height: $thickness;
-      top: -$thickness / 4;
+      top: calc(#{$offset} - #{$thickness / 4});
     }
   }
 }
