--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,64 +1,75 @@
 @import './mixins';
 @import '../components';
 
+// apply different theme when needed
+// @import './theme/light';
+
+// default variables
+@import './vars';
+
 .range-slider {
   position: relative;
 
+  // prettier-ignore
   @include track(
-    $name: 'track',
-    $thickness: 5px,
-    $bg: #551e75,
-    $border-width: 0,
-    $border-color: black,
-    $border-radius: 5px
+    $name:          $track-name,
+    $thickness:     $track-thickness,
+    $bg:            $track-bg,
+    $border-width:  $track-border-width,
+    $border-color:  $track-border-color,
+    $border-radius: $track-border-radius
   );
 
+  // prettier-ignore
   @include grid(
-    $name: 'grid',
-    $offset: 25px,
-    $line-thickness: 1px,
-    $line-style: solid,
-    $line-color: black,
-    $label-offset: 20%,
-    $label-font-size: 14px,
-    $pip-max-size: 12px,
-    $pip-max-thickness: 2px,
-    $pip-color: black
+    $name:              $grid-name,
+    $offset:            $grid-offset,
+    $line-thickness:    $grid-line-thickness,
+    $line-style:        $grid-line-style,
+    $line-color:        $grid-line-color,
+    $label-offset:      $grid-label-offset,
+    $label-font-size:   $grid-label-font-size,
+    $pip-max-size:      $grid-pip-max-size,
+    $pip-max-thickness: $grid-pip-max-thickness,
+    $pip-color:         $grid-pip-color,
   );
 
+  // prettier-ignore
   @include interval(
-    $name: 'interval',
-    $offset: 0px,
-    $thickness: 10px,
-    $bg: #139b6e,
-    $border-width: 0,
-    $border-color: black,
-    $border-radius: 5px
+    $name:          $interval-name,
+    $offset:        $interval-offset,
+    $thickness:     $interval-thickness,
+    $bg:            $interval-bg,
+    $border-width:  $interval-border-width,
+    $border-color:  $interval-border-color,
+    $border-radius: $interval-border-radius
   );
 
+  // prettier-ignore
   @include handle(
-    $name: 'handle',
-    $offset: -8px,
-    $width: 20px,
-    $height: 20px,
-    $bg: #920e0e,
-    $border-width: 1px,
-    $border-color: black,
-    $border-radius: 50%,
-    $active-border-width: 2px,
-    $active-border-color: black,
-    $active-scale-factor: 1.05
+    $name:                $handle-name,
+    $offset:              $handle-offset,
+    $width:               $handle-width,
+    $height:              $handle-height,
+    $bg:                  $handle-bg,
+    $border-width:        $handle-border-width,
+    $border-color:        $handle-border-color,
+    $border-radius:       $handle-border-radius,
+    $active-border-width: $handle-active-border-width,
+    $active-border-color: $handle-active-border-color,
+    $active-scale-factor: $handle-active-scale-factor,
   );
 
+  // prettier-ignore
   @include tooltip(
-    $name: 'tooltip',
-    $padding: 10px 20px,
-    $offset: 20px,
-    $bg: #cacaca,
-    $border-width: 1px,
-    $border-color: #2e2e2e,
-    $border-radius: 5px,
-    $font-size: 16px,
-    $font-weight: normal
+    $name:            $tooltip-name,
+    $padding:         $tooltip-padding,
+    $offset:          $tooltip-offset,
+    $bg:              $tooltip-bg,
+    $border-width:    $tooltip-border-width,
+    $border-color:    $tooltip-border-color,
+    $border-radius:   $tooltip-border-radius,
+    $font-size:       $tooltip-font-size,
+    $font-weight:     $tooltip-font-weight,
   );
 }
