Add base vars to _vars.scss
Now component vars can be calculated from base vars

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,52 +1,73 @@
+/* BASE VARIABLES */
+
+// Colors
+$color-primary: #4a148c !default;
+$color-primary-light: #7c43bd !default;
+$color-primary-dark: #12005e !default;
+$color-primary-text: #ffffff !default;
+$color-secondary: #e65100 !default;
+$color-secondary-light: #ff833a !default;
+$color-secondary-dark: #ac1900 !default;
+$color-secondary-text: #000000 !default;
+
+// Typography
+$font: 'Open Sans', Arial, sans-serif !default;
+
+// Sizes
+$base-size: 1rem !default;
+$scaling-factor: 1.1 !default;
+
+/* COMPONENTS */
+
 // Track component
 $track-name: 'track' !default;
-$track-thickness: 5px !default;
-$track-bg: #551e75 !default;
-$track-border-width: 0 !default;
-$track-border-color: black !default;
-$track-border-radius: 5px !default;
+$track-thickness: $base-size / 3 !default;
+$track-bg: $color-primary !default;
+$track-border-width: 0px !default;
+$track-border-color: $color-primary-dark !default;
+$track-border-radius: $base-size / 3 !default;
 
 // Grid component
 $grid-name: 'grid' !default;
-$grid-offset: 25px !default;
-$grid-line-thickness: 1px !default;
+$grid-line-thickness: $base-size / 15 !default;
 $grid-line-style: solid !default;
-$grid-line-color: black !default;
-$grid-label-offset: 20% !default;
-$grid-label-font-size: 14px !default;
-$grid-pip-max-size: 12px !default;
+$grid-line-color: $color-primary-dark !default;
+$grid-label-offset: $base-size * 0.3 !default;
+$grid-label-font-size: $base-size * 0.9 !default;
+$grid-pip-max-size: $base-size * 0.9 !default;
 $grid-pip-max-thickness: 2px !default;
-$grid-pip-color: black !default;
+$grid-pip-color: $color-primary-dark !default;
+$grid-offset: $base-size * 1.5 !default;
 
 // Interval component
 $interval-name: 'interval' !default;
-$interval-offset: 0px !default;
-$interval-thickness: 10px !default;
-$interval-bg: #139b6e !default;
-$interval-border-width: 0 !default;
-$interval-border-color: black !default;
-$interval-border-radius: 5px !default;
+$interval-thickness: $base-size * 0.6 !default;
+$interval-bg: $color-secondary-light !default;
+$interval-border-width: 0px !default;
+$interval-border-color: $color-secondary-dark !default;
+$interval-border-radius: $base-size / 3 !default;
+$interval-offset: -$interval-border-width !default;
 
 // Handle component
 $handle-name: 'handle' !default;
+$handle-width: $base-size * 1.5 !default;
+$handle-height: $base-size * 1.5 !default;
+$handle-bg: $color-primary !default;
+$handle-border-width: 0px !default;
+$handle-border-color: $color-primary-dark !default;
+$handle-border-radius: $base-size !default;
+$handle-active-border-width: 0px !default;
+$handle-active-border-color: $color-primary-dark !default;
+$handle-active-scale-factor: $scaling-factor !default;
 $handle-offset: -8px !default;
-$handle-width: 20px !default;
-$handle-height: 20px !default;
-$handle-bg: #920e0e !default;
-$handle-border-width: 1px !default;
-$handle-border-color: black !default;
-$handle-border-radius: 50% !default;
-$handle-active-border-width: 2px !default;
-$handle-active-border-color: black !default;
-$handle-active-scale-factor: 1.05 !default;
 
 // Tooltip component
 $tooltip-name: 'tooltip' !default;
-$tooltip-padding: 10px 20px !default;
-$tooltip-offset: 20px !default;
-$tooltip-bg: #cacaca !default;
-$tooltip-border-width: 1px !default;
-$tooltip-border-color: #2e2e2e !default;
-$tooltip-border-radius: 5px !default;
-$tooltip-font-size: 16px !default;
+$tooltip-padding: $base-size * 0.5 $base-size * 1.1 !default;
+$tooltip-bg: $color-secondary !default;
+$tooltip-border-width: 0px !default;
+$tooltip-border-color: $color-secondary-dark !default;
+$tooltip-border-radius: $base-size / 3 !default;
+$tooltip-font-size: $base-size !default;
 $tooltip-font-weight: normal !default;
+$tooltip-offset: 20px !default;
