--- a/src/components/handle/_handle.scss
+++ b/src/components/handle/_handle.scss
@@ -9,7 +9,6 @@
 /// @param $active-border-width
 /// @param $active-border-color
 /// @param $active-scale-factor - how much to scale active handle
-/// @param $offset position relative to track
 @mixin handle(
   $name,
   $width,
@@ -20,12 +19,10 @@
   $border-radius,
   $active-border-width,
   $active-border-color,
-  $active-scale-factor,
-  $offset
+  $active-scale-factor
 ) {
   @include element($name) {
     position: absolute;
-    top: $offset;
     width: $width;
     height: $height;
     background: $bg;
@@ -35,8 +32,7 @@
 
     @include modifier(is-active) {
       border: $active-border-width solid $active-border-color;
-      top: calc(#{$offset} - #{$active-border-width / 2});
-      transform-origin: 0 0;
+      transform-origin: left;
       transform: scale($active-scale-factor)
         translateX(calc(-50% + #{$active-border-width / 2}));
       z-index: 1;
