--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -15,7 +15,6 @@ $font: 'Open Sans', Arial, sans-serif !default;
 
 // Sizes
 $base-size: 1rem !default;
-$scaling-factor: 1.1 !default;
 
 /* COMPONENTS */
 
@@ -37,7 +36,7 @@ $grid-label-font-size: $base-size * 0.9 !default;
 $grid-pip-max-size: $base-size * 0.9 !default;
 $grid-pip-max-thickness: 2px !default;
 $grid-pip-color: $color-primary-dark !default;
-$grid-offset: $base-size * 1.5 !default;
+$grid-offset: $base-size * 1.3 !default;
 
 // Interval component
 $interval-name: 'interval' !default;
@@ -46,7 +45,6 @@ $interval-bg: $color-secondary-light !default;
 $interval-border-width: 0px !default;
 $interval-border-color: $color-secondary-dark !default;
 $interval-border-radius: $base-size / 3 !default;
-$interval-offset: -$interval-border-width !default;
 
 // Handle component
 $handle-name: 'handle' !default;
@@ -58,8 +56,7 @@ $handle-border-color: $color-primary-dark !default;
 $handle-border-radius: $base-size !default;
 $handle-active-border-width: 0px !default;
 $handle-active-border-color: $color-primary-dark !default;
-$handle-active-scale-factor: $scaling-factor !default;
-$handle-offset: -8px !default;
+$handle-active-scale-factor: 1.2 !default;
 
 // Tooltip component
 $tooltip-name: 'tooltip' !default;
@@ -70,4 +67,4 @@ $tooltip-border-color: $color-secondary-dark !default;
 $tooltip-border-radius: $base-size / 3 !default;
 $tooltip-font-size: $base-size !default;
 $tooltip-font-weight: normal !default;
-$tooltip-offset: 20px !default;
+$tooltip-offset: $base-size * 1.2 !default;
