--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,8 @@
 
 .range-slider {
   position: relative;
+  display: flex;
+  align-items: center;
 
   // prettier-ignore
   @include track(
@@ -37,7 +39,6 @@
   // prettier-ignore
   @include interval(
     $name:          $interval-name,
-    $offset:        $interval-offset,
     $thickness:     $interval-thickness,
     $bg:            $interval-bg,
     $border-width:  $interval-border-width,
@@ -48,7 +49,6 @@
   // prettier-ignore
   @include handle(
     $name:                $handle-name,
-    $offset:              $handle-offset,
     $width:               $handle-width,
     $height:              $handle-height,
     $bg:                  $handle-bg,
