Change modifier name according to bem
is-active to active

--- a/src/styles/themes/default/components/_handle.scss
+++ b/src/styles/themes/default/components/_handle.scss
@@ -15,7 +15,7 @@
     transform: translateY(50%);
   }
 
-  @include modifier('is-active') {
+  @include modifier('active') {
     z-index: 1;
 
     &-horizontal {
