--- a/src/styles/themes/modern/components/_handle.scss
+++ b/src/styles/themes/modern/components/_handle.scss
@@ -19,7 +19,7 @@
     border-bottom: $base-size * 0.7 solid transparent;
   }
 
-  @include modifier('is-active') {
+  @include modifier('active') {
     z-index: 1;
 
     &-horizontal {
