--- a/src/styles/themes/default/components/_index.scss
+++ b/src/styles/themes/default/components/_index.scss
@@ -1,3 +1,5 @@
+// TODO: move all styles to components
+// each component should be self contained (.ts, .scss, images, etc ...)
 @import './track';
 @import './grid';
 @import './interval';
