Hide components applying class, not with style
Before: Components made hidden applying style - display: none

After: Components made hidden applying modifier class.
e.g.: tooltip_is-hidden

--- a/src/styles/themes/default/components/_grid.scss
+++ b/src/styles/themes/default/components/_grid.scss
@@ -15,6 +15,10 @@
     width: $base-size / 15;
     transform: translateX($base-size * 1.5);
   }
+
+  @include modifier('is-hidden') {
+    display: none;
+  }
 }
 
 @include element('grid-cell') {
