--- a/src/styles/themes/default/components/_interval.scss
+++ b/src/styles/themes/default/components/_interval.scss
@@ -12,4 +12,8 @@
   @include modifier('vertical') {
     width: $base-size * 0.6;
   }
+
+  @include modifier('is-hidden') {
+    display: none;
+  }
 }
