--- a/src/styles/themes/default/components/_tooltip.scss
+++ b/src/styles/themes/default/components/_tooltip.scss
@@ -17,6 +17,10 @@
     transform: translateY(50%) translateX(calc(#{- $base-size * 1.5} - 50%));
   }
 
+  @include modifier('is-hidden') {
+    display: none;
+  }
+
   @include modifier('has-collisions') {
     opacity: 0;
     z-index: -10;
