Put component styles in component folders
Component should be self contained
(functionality, structure and styles should be in 1 folder)

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import './themes/modern/vars';
+@import './themes/default';
 @import './mixins';
 
 .range-slider {
@@ -15,5 +15,5 @@
     flex-direction: column;
   }
 
-  @import './themes/modern/components';
+  @import '../components';
 }
