--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -3,7 +3,7 @@ $grid-offset: $base-size * 1.3 !default;
 $grid-thickness: $base-size / 15 !default;
 
 @include element('grid') {
-  position: absolute;
+  position: relative;
   background: $grid-bg;
 
   @include modifier('horizontal') {
