Add wrapper element
Put old input and range slider inside wrapper element.
This is done for easyer styling.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,6 +73,14 @@ $cell-label-font-size: $base-size * 0.9 !default;
   margin: $base-size / 2 $base-size;
 }
 
+.range-slider-wrapper {
+  height: 100%;
+}
+
+.range-slider-root {
+  height: 100%;
+}
+
 .range-slider_vertical {
   height: 100%;
   flex-direction: row;
